[package]
edition = "2021"
name = "example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"

static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf52840-pac = { version = "0.12.0" }

[profile.release]
debug = 2
